       should be removed. (Stefan)
- ADD: Changing of log-messages and author of any revsision
       is possible from the log dialog - if the server has
       the required hooks set up. (Stefan)
- CHG: The "add before commit" option in the settings dialog is
       gone, this option is now in the commit dialog where it
       belongs. (Stefan)
- BUG: Pressing the "Find" button in the merge dialog lead
       to an error message about the path being invalid. (Stefan)
- BUG: ignore patterns _not_ starting with * weren't correctly
       used inside unversioned folders. (Stefan)

Version 1.0.5
- ADD: Automatic check for newer version. (Stefan)
- ADD: The log dialog shows a progress bar while fetching
       the log messages. (Stefan)
- ADD: TortoiseMerge remembers its last size and window state. (Stefan)
- ADD: If all versioned files are selected in the commit dialog, and
       only one target was selected in the explorer for commit then
       commit recursively instead of committing the file list. (Stefan)
- ADD: Hitting F5 in the log dialog does the same as the "fetch all"
       button. (Stefan)
- CHG: Removed the info picture in the commit dialog. The statistics
       are now shown in the tooltip for the info line just below
       the filelist. (Stefan)
- BUG: Some files were not ignored when adding or committing, even
       if they matched the ignore patterns. (Stefan)
- BUG: The option "Don't convert files when diffing against BASE"
       was ignored due to wrong brackets in the code. (Stefan)
- BUG: The added icon overlay wasn't shown due to a wrong registry
       entry set during installation. (Stefan Fuhrmann)
- BUG: The revision column wasn't sorted correctly. (Stefan Fuhrmann)
- BUG: The locatorbar in TortoiseMerge shrank continuously whith every
       reload. (Stefan)
- BUG: TortoiseMerge calculated the size of the scrollbars wrong for
       files with many tabs in it. (Stefan)
- BUG: The cache for the drivetypes were initialized wrong. This